--- a/.env
+++ b/.env
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WX_APPID=wxb48cca98c04caf2a
+WX_APPSECRET=57b0c72a414a0152ac64b3378a8ef2e0
